Fix navigation bar z-index

--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ nav ul {
     top: 0;
     width: 100%;
     height: 48px;
-    z-index: 3;
+    z-index: 100;
 }
 
 nav li {
